Fix bad URL in library.properties

--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Michael Margolis <m.margolis@mdx.ac.uk>, Franco Raimondi<f.raimondi@m
 sentence=A library to extend the core Asip library with additional services
 paragraph=This library includes additional services for Asip that do not require external libraries: servo motors, sonar distance sensors and tones.
 category=Device Control
-url=https://bitbucket.org/mdxmase/asip-services
+url=https://github.com/mdxmase/asip-additional-services
 architectures=*
